--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "prompt (>=0.4.1,<0.5.0)"
 ]
 
 
@@ -22,3 +23,16 @@ packages = [
 
 [tool.poetry.scripts]
 project = "src.primitive_db.main:main"
+
+[tool.ruff]
+line-length = 88
+target-version = "py312"
+exclude = ["venv", ".venv", "dist", "__pycache__"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I"]
+ignore = []
+[dependency-groups]
+dev = [
+    "ruff (>=0.14.11,<0.15.0)"
+]
